--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <div class="main-container">
 
-        <img src="corretorDaaz.png" class="img-fluid  imagem" alt="Homem usando um corretor postural">
+        <img src="Conteudo_Daaz.png" class="img-fluid  imagem" alt="Homem usando um corretor postural">
 
         <!-- video loop-->
         <section class="bk-video">
@@ -20,15 +20,15 @@
         </section>
 
         <section class="content">  
-        <h3 class="titulolp"> Corretor Postural Daaz Tam G/GG </h3>
+        <h3 class="titulolp"> Tipoia Imobilizadora Dazz Tam PP </h3>
 
         <p class="paragrafo"> 
 
-                O uso do corretor postural, também conhecido como suporte ou colete postural, é uma ferramenta que ajuda a manter uma postura adequada do corpo. Seus benefícios incluem:
-
-                Melhora da postura: O corretor ajuda a alinhar os ombros, a coluna vertebral e a pélvis, incentivando uma postura mais ereta e natural.
-
-                Alívio de dores: Pode ajudar a reduzir dores nas costas, ombros e pescoço, que muitas vezes são causadas por uma postura inadequada. </p>
+          Uma tipoia imobilizadora é um dispositivo médico projetado para imobilizar e dar suporte a partes do corpo,
+           como braços ou ombros, após lesões, fraturas, cirurgias ou outras condições médicas. 
+           Ela desempenha um papel fundamental ao estabilizar a área afetada, reduzir a dor, facilitar a cicatrização,
+            prevenir danos adicionais e proporcionar suporte pós-cirúrgico. Em resumo, as tipoias imobilizadoras desempenham um papel 
+            essencial no tratamento e recuperação de lesões ortopédicas, garantindo a integridade e a proteção da área afetada.</p>
 
         </section>
             </div> <!--Fim Main Container-->
